--- a/Index.html
+++ b/Index.html
@@ -210,6 +210,8 @@
            document.getElementById("top_skins_list").innerHTML = text;
            document.getElementById("list_of_skins").style.display = 'block';
            document.getElementById("score_display").style.display = 'block';
+           document.getElementById("share").style.display = 'block';
+            
         }
         </script>
     </div>
@@ -233,7 +235,7 @@
     </div>
     
     <!-- contents within 'div id = share' from https://sharingbuttons.io/ The MIT License (MIT) Copyright (c) 2015 Maximilian Stoiber -->
-    <div id="share">
+    <div id="share" style= "display:none">
         <!-- Share button Twitter -->
         <a class="resp-sharing-button__link" id="twitter_a" href="https://twitter.com/intent/tweet/?text=&amp;url=https%3A%2F%2Fwww.csgoinventoryrater.com%2F" target="_blank" rel="noopener" aria-label="Share on Twitter">
           <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--large"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
